--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,1 +1,11 @@
+*.iml
+.gradle
+/local.properties
+.idea
+.idea/misc.xml
+.DS_Store
 /build
+/captures
+.externalNativeBuild
+.cxx
+local.properties
